Compatibility for new naming convention

--- a/vswitch.1
+++ b/vswitch.1
@@ -37,6 +37,10 @@ Change your VPN host/provider. Defaults to \fBnord\fR
 .IP "" 4
 (\fBpr\fR) Change the protocol used to connect to VPN (\fBudp\fR or \fBtcp\fR). Changes take effect during next connection. Defaults to \fBudp\fR
 .TP
+\fBpremove\fR
+.IP "" 4
+(\fBrm\fR) Uninstall \fBvswitch\fR
+.TP
 \fBstatus\fR
 .IP "" 4
 Check if the killswitch is enabled (blocking traffic) or disabled (allowing all traffic)
