Adding to documentation

--- a/vswitch.1
+++ b/vswitch.1
@@ -37,9 +37,9 @@ Change your VPN host/provider. Defaults to \fBnord\fR
 .IP "" 4
 (\fBpr\fR) Change the protocol used to connect to VPN (\fBudp\fR or \fBtcp\fR). Changes take effect during next connection. Defaults to \fBudp\fR
 .TP
-\fBpremove\fR
+\fBremove\fR
 .IP "" 4
-(\fBrm\fR) Uninstall \fBvswitch\fR
+(\fBrm\fR) Uninstall \fBvswitch\fR from your device
 .TP
 \fBstatus\fR
 .IP "" 4
