Variables now saved in conf file

--- a/vswitch.1
+++ b/vswitch.1
@@ -51,7 +51,7 @@ Check if the killswitch is enabled (blocking traffic) or disabled (allowing all 
 .TP
 \fBunpanic\fR
 .IP "" 4
-Return \fBvswitch\fR to a standard killswitch-enabled state. From here you may run \fBvswitch off\fR to return to a non-VPN enabled state.
+Return \fBvswitch\fR to a standard killswitch-enabled state. From here you may run \fBvswitch off\fR to return to a non-VPN enabled state. See also: \fBpanic\fR
 .TP
 \fBupdate\fR
 .IP "" 4
