Added GPUv3 to Copyrights

--- a/vswitch.1
+++ b/vswitch.1
@@ -79,4 +79,4 @@ Prevent all non-tunneled communications
    git clone https://github.com/MorningCoffeeZombie/LinuxVPNKillswitch.git
 .
 .SH "COPYRIGHT"
-    Specify your copyright information.
+    GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
