Adding value for IPv4 v IPv6

--- a/vswitch.1
+++ b/vswitch.1
@@ -23,6 +23,10 @@ Display this man page
 .TP
 \fBhost\fR [argument]
 .IP "" 4
+(\fBipv\fR) Change the version of internet protocols used to connect (\fB4\fR or \fB6\fR). Defaults to \fBIPv4\fR
+.TP
+\fBipversion\fR [argument]
+.IP "" 4
 Change your VPN host/provider. Defaults to \fBnord\fR
 .TP
 \fBon\fR
