Improved on/off and tunneling

--- a/vswitch.1
+++ b/vswitch.1
@@ -60,6 +60,9 @@ Return \fBvswitch\fR to a standard killswitch-enabled state. From here you may r
 \fBupdate\fR
 .IP "" 4
 (\fBup\fR) Update the list of servers provided by your VPN host
+\fBwho\fR
+.IP "" 4
+(\fBip\fR) Display your curren public IP address
 
 
 .SH "EXAMPLES"
