Formatting on man page + minor command tweaks

--- a/vswitch.1
+++ b/vswitch.1
@@ -27,7 +27,7 @@ Change your VPN host/provider. Defaults to \fBnordvpn\fR
 .TP
 \fBipversion\fR [argument]
 .IP "" 4
-(\fBipv\fR) Change the version of internet protocols used to connect (\fB4\fR or \fB6\fR). Defaults to \fBIPv4\fR
+(\fBipv\fR) Change the version of internet protocols used to connect (\fB4\fR or \fB6\fR). Defaults to IPv\fB4\fR
 .TP
 \fBon\fR
 .IP "" 4
@@ -60,9 +60,10 @@ Return \fBvswitch\fR to a standard killswitch-enabled state. From here you may r
 \fBupdate\fR
 .IP "" 4
 (\fBup\fR) Update the list of servers provided by your VPN host
+.TP
 \fBwho\fR
 .IP "" 4
-(\fBip\fR) Display your curren public IP address
+Display your curren public IP address
 
 
 .SH "EXAMPLES"
