Man page changes

--- a/vswitch.1
+++ b/vswitch.1
@@ -15,11 +15,7 @@
 .SH "OPTIONS"
 \fBhelp\fR
 .IP "" 4
-Display this man page
-.TP
-\fB/?\fR
-.IP "" 4
-Display this man page
+(\fB/?\fR) Display this man page
 .TP
 \fBhost\fR [argument]
 .IP "" 4
