--- a/vswitch.1
+++ b/vswitch.1
@@ -41,6 +41,10 @@ Change your VPN host/provider. Defaults to \fBnordvpn\fR
 .IP "" 4
 (\fBpr\fR) Change the protocol used to connect to VPN (\fBudp\fR or \fBtcp\fR). Changes take effect during next connection. Defaults to \fBudp\fR
 .TP
+\fBregion\fR [argument]
+.IP "" 4
+(\fBlocation\fR) Declare a 2-digit ISO country code as a preferential connection. Default = "us"
+.TP
 \fBremove\fR
 .IP "" 4
 (\fBrm\fR) Uninstall \fBvswitch\fR from your device
