Server recommender can now recommend, need to make it useful. Region may be set to 'clear'

--- a/vswitch.1
+++ b/vswitch.1
@@ -43,7 +43,7 @@ Change your VPN host/provider. Defaults to \fBnordvpn\fR
 .TP
 \fBregion\fR [argument]
 .IP "" 4
-(\fBlocation\fR) Declare a 2-digit ISO country code as a preferential connection. Default = "us"
+(\fBlocation\fR) Declare a 2-digit ISO country code as a preferential connection. Default = "us", use "clear" to remove preferences.
 .TP
 \fBremove\fR
 .IP "" 4
