Server recommender is now unlocked as command

--- a/vswitch.1
+++ b/vswitch.1
@@ -41,6 +41,10 @@ Change your VPN host/provider. Defaults to \fBnordvpn\fR
 .IP "" 4
 (\fBpr\fR) Change the protocol used to connect to VPN (\fBudp\fR or \fBtcp\fR). Changes take effect during next connection. Defaults to \fBudp\fR
 .TP
+\fBrcomend\fR [argument]
+.IP "" 4
+(\fBrec\fR) (\fBlist\fR) List the top recommended servers
+.TP
 \fBregion\fR [argument]
 .IP "" 4
 (\fBlocation\fR) Declare a 2-digit ISO country code as a preferential connection. Default = "us", use "clear" to remove preferences.
