Notes & minor tweaks

--- a/vswitch.1
+++ b/vswitch.1
@@ -41,7 +41,7 @@ Change your VPN host/provider. Defaults to \fBnordvpn\fR
 .IP "" 4
 (\fBpr\fR) Change the protocol used to connect to VPN (\fBudp\fR or \fBtcp\fR). Changes take effect during next connection. Defaults to \fBudp\fR
 .TP
-\fBrcomend\fR [argument]
+\fBrecommend\fR [argument]
 .IP "" 4
 (\fBrec\fR) (\fBlist\fR) List the top recommended servers
 .TP
