Debian installation improvements

--- a/vswitch.1
+++ b/vswitch.1
@@ -67,7 +67,7 @@ Return \fBvswitch\fR to a standard killswitch-enabled state. From here you may r
 .TP
 \fBwho\fR
 .IP "" 4
-Display your curren public IP address
+Display your current public IP address
 
 
 .SH "EXAMPLES"
