Removed some repetitive args. Launching Debian connect. Added Distro settings.

--- a/Resources/vswitch.1
+++ b/Resources/vswitch.1
@@ -13,6 +13,10 @@
 
 
 .SH "OPTIONS"
+\fBdistrobution\fR
+.IP "" 4
+(\fBos\fR) Declare which Linux distrobution is in use. Default = Solus.
+.TP
 \fBhelp\fR
 .IP "" 4
 (\fB/?\fR) Display this man page
@@ -27,11 +31,11 @@ Change your VPN host/provider. Defaults to \fBnordvpn\fR
 .TP
 \fBon\fR
 .IP "" 4
-(\fBengage\fR)(\fBenable\fR) Enable killswitch. All non-VPN connections will fail.
+(\fBenable\fR) Enable killswitch. All non-VPN connections will fail.
 .TP
 \fBoff\fR
 .IP "" 4
-(\fBdisengage\fR)(\fBdisable\fR) Disable killswitch. All traffic will be permitted.
+(\fBdisable\fR) Disable killswitch. All traffic will be permitted.
 .TP
 \fBpanic\fR
 .IP "" 4
