Added "username" settings

--- a/Resources/vswitch.1
+++ b/Resources/vswitch.1
@@ -69,6 +69,10 @@ Return \fBvswitch\fR to a standard killswitch-enabled state. From here you may r
 .IP "" 4
 (\fBup\fR) Update the list of servers provided by your VPN host
 .TP
+\fBusername\fR
+.IP "" 4
+Declare the username for the preferred VPN host.
+.TP
 \fBwho\fR
 .IP "" 4
 Display your current public IP address
