Test for Arch. Added speedtest. Minor fixes/improvements.

--- a/Resources/vswitch.1
+++ b/Resources/vswitch.1
@@ -57,6 +57,10 @@ Change your VPN host/provider. Defaults to \fBnordvpn\fR
 .IP "" 4
 (\fBrm\fR) Uninstall \fBvswitch\fR from your device
 .TP
+\fBspeedtest\fR [option]
+.IP "" 4
+(\fBspeed\fR) Connect to speedtest.net via HTTPS to determine internet connectivity in Mbit/s. You may also append "byte" to the command to display connectivity in Mbyte/s.
+.TP
 \fBstatus\fR
 .IP "" 4
 Check if the killswitch is enabled (blocking traffic) or disabled (allowing all traffic)
