--- a/Resources/vswitch.1
+++ b/Resources/vswitch.1
@@ -96,7 +96,7 @@ Prevent all non-tunneled communications
 \fBvswitch protocol udp\fR
 \fBvswitch\fR allows users to immediately cut all connections (tunneled or not) with it's commands. To reestablish unfiltered connections users must de-escalate in the proper order.
 .TP
-This was done as a security measure to allow termination of running programs before immediately regressing to an untulleded state. Below is the escalation pyramid with the safest settings at the top and least safe at the bottom.
+This was done as a security measure to allow termination of running programs before immediately regressing to an untunneled state. Below is the escalation pyramid with the safest settings at the top and least safe at the bottom.
 .IP "" 4
 ^
 .br
