vswitch now updates itself during the `up` command

--- a/Resources/vswitch.1
+++ b/Resources/vswitch.1
@@ -125,7 +125,7 @@ v
 	Please report bugs at:	https://github.com/MorningCoffeeZombie/vswitch/issues
 .
 .SH "AUTHOR"
-   git clone https://github.com/MorningCoffeeZombie/vswitch.git
+   MorningCoffeeZombie: git clone https://github.com/MorningCoffeeZombie/vswitch.git
 .
 .SH "COPYRIGHT"
     GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
